[package]
name = "wreckfest-teleport"
version = "0.1.4"
edition = "2021"
rust-version = "1.75"
description = "Automatic telemetry reader for Wreckfest 1 (reads real position/orientation from process memory and derives motion data for SimHub)."
license = "MIT"
repository = "https://github.com/t-hovestadt/wreckfest-teleport"

# Library-first: all logic lives in lib.rs so the binary stays a thin shell and the crate is reusable.
[lib]
name = "wreckfest_teleport"
path = "src/lib.rs"

[[bin]]
name = "wreckfest-teleport"
path = "src/bin/wreckfest-teleport.rs"

[dependencies]
ctrlc = "3"
eframe = "0.27.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
